src/App/components/Certifications/certifications.css
.certifications {
  /* border: 2px solid red; */
  width: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.cert-grid {
  /* border: 2px solid red; */
  max-width: 80%;
  margin: 2em auto;
  display: flex;
  flex-flow: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 2em;
}

.cert-img {
  max-width: 30em;
  display: block;
}
.cert-heading {
  margin: 1em auto 1em auto;
}
.cert-span {
  color: aquamarine;
}

.cert-img:hover {
  animation: certZoom 1s ease 0s 1 normal forwards;
}

@keyframes certZoom {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(2.4);
  }
}
@keyframes certZoomSmall {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(1.7);
  }
}

@media only screen and (max-width: 1180px) {
  .cert-img:hover {
    animation: certZoomSmall 1s ease 0s 1 normal forwards;
  }
}

